--- a/app/src/main/res/layout/new_article.xml
+++ b/app/src/main/res/layout/new_article.xml
@@ -59,7 +59,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:text="@string/article_title"
+                        android:text="@string/article_title_needed"
                         android:textStyle="bold"/>
 
                     <EditText
