--- a/app/src/main/res/layout/item_article_big.xml
+++ b/app/src/main/res/layout/item_article_big.xml
@@ -51,7 +51,7 @@
                         android:id="@+id/itemArticleTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/title"
+                        android:text="@string/article_title_normal"
                         android:gravity="center"
                         android:textColor="@android:color/black"
                         android:textSize="22sp"
