--- a/app/src/main/res/layout/item_article_small.xml
+++ b/app/src/main/res/layout/item_article_small.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/title"
+                android:text="@string/article_title_normal"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
