--- a/app/src/main/res/drawable-v24/ic_background.xml
+++ b/app/src/main/res/drawable-v24/ic_background.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <solid android:color="@android:color/white"/>
+    <solid android:color="@android:color/white" />
     <stroke
-        android:color="@android:color/black"
-        android:width="2dp"/>
-    <corners android:radius="15dp"/>
+        android:width="2dp"
+        android:color="@android:color/black" />
+    <corners android:radius="15dp" />
 </shape>
