--- a/app/src/main/res/drawable-v24/ic_home.xml
+++ b/app/src/main/res/drawable-v24/ic_home.xml
@@ -1,11 +1,10 @@
-<vector
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="28dp"
     android:height="28dp"
     android:tint="#FFFFFF"
-    android:viewportHeight="24"
     android:viewportWidth="24"
-    android:width="28dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:viewportHeight="24">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
+        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
 </vector>
