--- a/app/src/main/res/layout/edit_user.xml
+++ b/app/src/main/res/layout/edit_user.xml
@@ -11,23 +11,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.05"/>
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.95"/>
+        app:layout_constraintGuide_percent="0.95" />
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,13 +38,13 @@
                 android:id="@+id/editUserEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="@string/type_email"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
                 android:textAllCaps="true"
-                android:layout_marginBottom="12dp"/>
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -80,18 +80,18 @@
                         android:ems="10"
                         android:gravity="center"
                         android:hint="@string/type_nickname"
-                        android:textColorHint="@color/backgroundColor"
+                        android:inputType="text"
                         android:textColor="@android:color/black"
-                        android:inputType="text" />
+                        android:textColorHint="@color/backgroundColor" />
 
                     <Button
+                        android:id="@+id/editUserChangeNickname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/change"
                         android:layout_gravity="center"
                         android:backgroundTint="?attr/colorAccent"
-                        android:textStyle="bold"
-                        android:id="@+id/editUserChangeNickname"/>
+                        android:text="@string/change"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -114,24 +114,24 @@
 
                     <Switch
                         android:id="@+id/editUserIsAdmin"
-                        android:theme="@style/DarkThemeSwitch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:switchPadding="5dp"
                         android:text="@string/isAdmin"
-                        android:textStyle="bold"
                         android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:theme="@style/DarkThemeSwitch" />
 
                     <Button
+                        android:id="@+id/editUserChangeAdmin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/change"
                         android:layout_gravity="center"
                         android:backgroundTint="?attr/colorAccent"
-                        android:textStyle="bold"
-                        android:id="@+id/editUserChangeAdmin"/>
+                        android:text="@string/change"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
