--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.alphadvlpr.infiniteminds.navigation.Info"
-    android:background="?attr/backgroundColor">
+    android:background="?attr/backgroundColor"
+    tools:context="com.alphadvlpr.infiniteminds.navigation.Info">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,26 +17,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.15"/>
+            app:layout_constraintGuide_percent="0.15" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.85"/>
+            app:layout_constraintGuide_percent="0.85" />
 
         <Button
             android:id="@+id/infoPrivacy"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:backgroundTint="@color/colorAccentLight"
             android:text="@string/privacy"
-            android:layout_marginTop="32dp"
             android:textColor="@android:color/black"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/guideline12"
             app:layout_constraintStart_toStartOf="@id/guideline11"
-            app:layout_constraintEnd_toEndOf="@id/guideline12"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/infoShare"
@@ -45,9 +45,9 @@
             android:backgroundTint="@color/colorAccentLight"
             android:text="@string/share_app"
             android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/infoPrivacy"
+            app:layout_constraintEnd_toEndOf="@id/guideline12"
             app:layout_constraintStart_toStartOf="@id/guideline11"
-            app:layout_constraintEnd_toEndOf="@id/guideline12" />
+            app:layout_constraintTop_toBottomOf="@id/infoPrivacy" />
 
         <Button
             android:id="@+id/infoReport"
@@ -56,9 +56,9 @@
             android:backgroundTint="@color/colorAccentLight"
             android:text="@string/report"
             android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/infoShare"
+            app:layout_constraintEnd_toEndOf="@id/guideline12"
             app:layout_constraintStart_toStartOf="@id/guideline11"
-            app:layout_constraintEnd_toEndOf="@id/guideline12" />
+            app:layout_constraintTop_toBottomOf="@id/infoShare" />
 
         <Button
             android:id="@+id/infoContact"
@@ -67,26 +67,26 @@
             android:backgroundTint="@color/colorAccentLight"
             android:text="@string/contact"
             android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/infoReport"
+            app:layout_constraintEnd_toEndOf="@id/guideline12"
             app:layout_constraintStart_toStartOf="@id/guideline11"
-            app:layout_constraintEnd_toEndOf="@id/guideline12"/>
+            app:layout_constraintTop_toBottomOf="@id/infoReport" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/infoBottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/infoBottomAppBar"
         android:layout_gravity="bottom"
-        app:menu="@menu/app_menu_info"
-        app:hideOnScroll="true"
+        android:paddingStart="15dp"
         app:fabAlignmentMode="end"
-        app:navigationIcon="@drawable/ic_home"
-        android:paddingStart="15dp"/>
+        app:hideOnScroll="true"
+        app:menu="@menu/app_menu_info"
+        app:navigationIcon="@drawable/ic_home" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/infoSearchFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/infoSearchFAB"
         android:src="@drawable/ic_search"
         app:backgroundTint="@color/blueLight"
         app:layout_anchor="@id/infoBottomAppBar"
