--- a/app/src/main/res/layout/item_article_big.xml
+++ b/app/src/main/res/layout/item_article_big.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/itemArticleCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/itemArticleCardView"
         android:layout_gravity="center"
-        app:cardCornerRadius="15dp"
-        app:cardBackgroundColor="@color/colorAccentLight"
-        android:elevation="8dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:elevation="8dp"
+        app:cardBackgroundColor="@color/colorAccentLight"
+        app:cardCornerRadius="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,8 +28,8 @@
                 android:id="@+id/itemArticleImage"
                 android:layout_width="match_parent"
                 android:layout_height="190dp"
-                android:scaleType="fitXY"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:scaleType="fitXY" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,36 +39,36 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp">
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/itemArticleTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/article_title_normal"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:gravity="center"
+                        android:text="@string/article_title_normal"
+                        android:textAllCaps="true"
                         android:textColor="@android:color/black"
                         android:textSize="22sp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginStart="10dp"
-                        android:textStyle="bold"
-                        android:textAllCaps="true"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/itemArticleVisits"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/visits_counter"
-                        android:gravity="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp"
                         android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"/>
+                        android:layout_marginEnd="10dp"
+                        android:gravity="center"
+                        android:text="@string/visits_counter"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
