--- a/app/src/main/res/layout/new_article.xml
+++ b/app/src/main/res/layout/new_article.xml
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.alphadvlpr.infiniteminds.articles.NewArticle"
-    android:background="?attr/backgroundColor">
+    android:background="?attr/backgroundColor"
+    tools:context="com.alphadvlpr.infiniteminds.articles.NewArticle">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.05"/>
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.95"/>
+        app:layout_constraintGuide_percent="0.95" />
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,19 +56,19 @@
                         android:id="@+id/natt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
                         android:text="@string/article_title_needed"
-                        android:textStyle="bold"/>
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/newArticleTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -88,8 +87,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingStart="20dp"
-                    android:paddingEnd="20dp"
                     android:paddingTop="10dp"
+                    android:paddingEnd="20dp"
                     android:paddingBottom="10dp">
 
                     <TextView
@@ -97,17 +96,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:textColor="@android:color/black"
                         android:text="@string/article_content"
-                        android:textStyle="bold"/>
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/newArticleContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
                         android:ems="10"
-                        android:inputType="textMultiLine" />
+                        android:inputType="textMultiLine"
+                        android:textColor="@android:color/black" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -131,9 +130,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:textColor="@android:color/black"
                         android:text="@string/article_images"
-                        android:textStyle="bold"/>
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
 
                     <Button
                         android:id="@+id/newArticleTakePicture"
@@ -149,8 +148,8 @@
                         android:id="@+id/newArticleImagesList"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginBottom="12dp"/>
+                        android:layout_marginBottom="12dp"
+                        android:orientation="vertical" />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -175,31 +174,31 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:textColor="@android:color/black"
                         android:text="@string/article_links"
-                        android:textStyle="bold"/>
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/newArticleDownloadOne"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_download_link_1"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:hint="@string/article_download_link_1"
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <EditText
                         android:id="@+id/newArticleDownloadTwo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_download_link_2"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:hint="@string/article_download_link_2"
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <EditText
                         android:id="@+id/newArticleDownloadThree"
@@ -217,11 +216,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_download_link_4"
-                        android:textColorHint="@color/backgroundColor"
                         android:gravity="center"
+                        android:hint="@string/article_download_link_4"
+                        android:inputType="textPersonName"
                         android:textColor="@android:color/black"
-                        android:inputType="textPersonName" />
+                        android:textColorHint="@color/backgroundColor" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -245,84 +244,84 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:textColor="@android:color/black"
                         android:text="@string/article_categories"
-                        android:textStyle="bold"/>
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/newArticleCategoryOne"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_category_1"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:hint="@string/article_category_1"
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <EditText
                         android:id="@+id/newArticleCategoryTwo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_category_2"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:hint="@string/article_category_2"
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <EditText
                         android:id="@+id/newArticleCategoryThree"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_category_3"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:hint="@string/article_category_3"
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <EditText
                         android:id="@+id/newArticleCategoryFour"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_category_4"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:hint="@string/article_category_4"
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <EditText
                         android:id="@+id/newArticleCategoryFive"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_category_5"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:hint="@string/article_category_5"
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <EditText
                         android:id="@+id/newArticleCategorySix"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/article_category_6"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black"
                         android:gravity="center"
-                        android:inputType="textPersonName" />
+                        android:hint="@string/article_category_6"
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:layout_marginBottom="32dp">
+                android:layout_marginBottom="32dp"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/newArticlePublish"
@@ -346,8 +345,8 @@
                     android:id="@+id/newArticleCancel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginStart="5dp"
+                    android:layout_weight="1"
                     android:backgroundTint="@color/colorAccent"
                     android:text="@string/article_cancel"
                     android:textColor="@android:color/black"
