--- a/app/src/main/res/layout/new_user.xml
+++ b/app/src/main/res/layout/new_user.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.alphadvlpr.infiniteminds.users.NewUser"
     android:background="?attr/backgroundColor"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:context="com.alphadvlpr.infiniteminds.users.NewUser">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.05"/>
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.95"/>
+        app:layout_constraintGuide_percent="0.95" />
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,8 +57,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:textColor="@android:color/black"
                         android:text="@string/email"
+                        android:textColor="@android:color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -70,9 +69,9 @@
                         android:ems="10"
                         android:gravity="center"
                         android:hint="@string/type_email"
-                        android:textColorHint="@color/backgroundColor"
+                        android:inputType="textEmailAddress"
                         android:textColor="@android:color/black"
-                        android:inputType="textEmailAddress"/>
+                        android:textColorHint="@color/backgroundColor" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -110,9 +109,9 @@
                         android:ems="10"
                         android:gravity="center"
                         android:hint="@string/type_nickname"
-                        android:textColorHint="@color/backgroundColor"
+                        android:inputType="text"
                         android:textColor="@android:color/black"
-                        android:inputType="text" />
+                        android:textColorHint="@color/backgroundColor" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -139,8 +138,8 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="@string/password"
-                        android:textSize="18sp"
                         android:textColor="@android:color/black"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                     <EditText
@@ -149,10 +148,10 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:gravity="center"
-                        android:inputType="textPassword"
                         android:hint="@string/type_password"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black" />
+                        android:inputType="textPassword"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <EditText
                         android:id="@+id/newUserPasswordConfirm"
@@ -160,14 +159,13 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:gravity="center"
-                        android:inputType="textPassword"
                         android:hint="@string/confirm_password"
-                        android:textColorHint="@color/backgroundColor"
-                        android:textColor="@android:color/black" />
+                        android:inputType="textPassword"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@color/backgroundColor" />
 
                     <Switch
                         android:id="@+id/newUserShowPasswords"
-                        android:theme="@style/DarkThemeSwitch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -175,7 +173,8 @@
                         android:switchPadding="5dp"
                         android:text="@string/show_password"
                         android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:theme="@style/DarkThemeSwitch" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
@@ -185,13 +184,13 @@
         android:id="@+id/newUserCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/colorAccent"
         android:text="@string/save"
         android:textColor="@android:color/black"
-        android:backgroundTint="@color/colorAccent"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
