--- a/app/src/main/res/layout/trending.xml
+++ b/app/src/main/res/layout/trending.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.alphadvlpr.infiniteminds.navigation.Trending"
-    android:background="?attr/backgroundColor">
+    android:background="?attr/backgroundColor"
+    tools:context="com.alphadvlpr.infiniteminds.navigation.Trending">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refreshFav"
@@ -14,28 +13,28 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trendingList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/trendingList"/>
+            android:layout_height="wrap_content" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/trendingBottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/trendingBottomAppBar"
         android:layout_gravity="bottom"
-        app:menu="@menu/app_menu_trending"
-        app:hideOnScroll="true"
+        android:paddingStart="15dp"
         app:fabAlignmentMode="end"
-        app:navigationIcon="@drawable/ic_home"
-        android:paddingStart="15dp"/>
+        app:hideOnScroll="true"
+        app:menu="@menu/app_menu_trending"
+        app:navigationIcon="@drawable/ic_home" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/trendingSearchFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/trendingSearchFAB"
-        app:backgroundTint="@color/blueLight"
         android:src="@drawable/ic_search"
+        app:backgroundTint="@color/blueLight"
         app:layout_anchor="@id/trendingBottomAppBar"
         app:maxImageSize="24dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
