--- a/app/src/main/res/menu/app_menu_login.xml
+++ b/app/src/main/res/menu/app_menu_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
@@ -13,11 +12,11 @@
         android:id="@+id/menuAbout"
         android:icon="@drawable/ic_info"
         android:title="@string/info"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menuUsers"
         android:icon="@drawable/ic_user_highlight"
         android:title="@string/users"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
 </menu>
