Fixed an issue which made the app crash when the user clicked on a chip on an article content to search for other articles with the same category. Fixed an issue which made the app crash when the user logged out clicking on the log out button on the main interface.

--- a/app/src/main/res/menu/navigation_bar_menu.xml
+++ b/app/src/main/res/menu/navigation_bar_menu.xml
@@ -18,7 +18,7 @@
         android:title="@string/search"/>
 
     <item
-        android:id="@+id/menuAbout"
+        android:id="@+id/menuInfo"
         android:icon="@drawable/ic_info_highlight"
         android:title="@string/info" />
 
