--- a/app/src/main/res/layout/article_list.xml
+++ b/app/src/main/res/layout/article_list.xml
@@ -21,6 +21,15 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refreshEditArticles"
         android:layout_width="0dp"
