--- a/app/src/main/res/layout/categories_list_inside.xml
+++ b/app/src/main/res/layout/categories_list_inside.xml
@@ -23,6 +23,15 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <TextView
         android:id="@+id/listCategoriesInfo"
         android:layout_width="0dp"
