--- a/app/src/main/res/menu/navigation_bar_menu.xml
+++ b/app/src/main/res/menu/navigation_bar_menu.xml
@@ -4,26 +4,26 @@
 
     <item
         android:id="@+id/menuHome"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/icon_home"
         android:title="@string/home"/>
 
     <item
         android:id="@+id/menuTrend"
-        android:icon="@drawable/ic_popular"
+        android:icon="@drawable/icon_trending"
         android:title="@string/trending" />
 
     <item
         android:id="@+id/menuSearch"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/icon_search"
         android:title="@string/search"/>
 
     <item
         android:id="@+id/menuInfo"
-        android:icon="@drawable/ic_info_highlight"
+        android:icon="@drawable/icon_info"
         android:title="@string/info" />
 
     <item
         android:id="@+id/menuUsers"
-        android:icon="@drawable/ic_user"
+        android:icon="@drawable/icon_users"
         android:title="@string/users" />
 </menu>
